# rocket

./: README.md  bun.lockb  index.html  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fc.rs  fs.rs  main.rs  menu.rs
src/components/: CodeArea.tsx  CodeEditor.tsx  CreateDir.tsx  FileIcon.tsx  NavFiles.tsx  NavFolderItem.tsx  Sidebar.tsx  Titlebar.tsx
src/components/menus/: FileContext.tsx
src/helpers/: create.tsx  filesys.ts  language.ts  reorder.ts  useHorizontalScroll.ts  uuid.ts
src/provider/: SideContext.tsx  SourceContext.tsx
src/stores/: active.ts  file.ts  opened.ts  states.ts
src/types/: File.ts  Icon.ts  Languages.ts
