[package]
name = "Rocket"
version = "0.1.2"
description = "A Tauri App"
authors = ["rahuletto"]
license = ""
repository = "https://github.com/Rahuletto/rocket"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
filetime = "^0.2.22"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = [ "window-hide", "window-close", "window-start-dragging", "window-minimize", "window-show", "window-maximize", "window-unminimize", "window-unmaximize", "fs-all", "updater", "macos-private-api"] }
notify = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
